// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should handle "caption" prop 1`] = `
<ForwardRef(TextField)
  caption={
    <span>
      Hello 
      <b>
        World
      </b>
      !
    </span>
  }
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
    <div
      className="caption M-t__2"
    >
      <span>
        Hello 
        <b>
          World
        </b>
        !
      </span>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "caption" prop 2`] = `
<ForwardRef(TextField)
  caption={
    <span>
      Hello 
      <b>
        World
      </b>
      !
    </span>
  }
  disabled={true}
  failed={true}
  variant="mobile"
>
  <div
    className="root"
  >
    <div
      className="reset input-block disabled failed variant-mobile size-l"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input disabled failed variant-mobile size-l"
            data-testid="text-field:field"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root disabled base-input disabled failed variant-mobile size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
    <div
      className="caption M-t__1 failed"
    >
      <span>
        Hello 
        <b>
          World
        </b>
        !
      </span>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "disabled" prop 1`] = `
<ForwardRef(TextField)
  disabled={true}
>
  <div
    className="root"
  >
    <div
      className="reset input-block disabled variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input disabled variant-desktop size-l"
            data-testid="text-field:field"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root disabled base-input disabled variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "focused" prop 1`] = `
<ForwardRef(TextField)
  focused={true}
>
  <div
    className="root"
  >
    <div
      className="reset input-block focused variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input focused variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input focused variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "label" prop 1`] = `
<ForwardRef(TextField)
  label="The best label in our world!"
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l with-label rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <label
          className="label variant-desktop as-placeholder"
          data-testid="text-field:label"
        >
          The best label in our world!
        </label>
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "label" prop 2`] = `
<ForwardRef(TextField)
  disabled={true}
  failed={true}
  label="The best label in our world!"
  variant="mobile"
>
  <div
    className="root"
  >
    <div
      className="reset input-block disabled failed variant-mobile size-l with-label"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <label
          className="label disabled failed variant-mobile as-placeholder"
          data-testid="text-field:label"
        >
          The best label in our world!
        </label>
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input disabled failed variant-mobile size-l"
            data-testid="text-field:field"
            disabled={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root disabled base-input disabled failed variant-mobile size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                disabled={true}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "multiline" prop 1`] = `
<ForwardRef(TextField)
  baseInputProps={
    Object {
      "rows": 3,
    }
  }
  multiline={true}
  onInput={[MockFunction]}
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l multiline rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            multiline={true}
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            rows={3}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <textarea
                className="field reset multiline"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
                rows={3}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "variant" prop 1`] = `
<ForwardRef(TextField)
  variant="desktop"
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle "variant" prop 2`] = `
<ForwardRef(TextField)
  variant="mobile"
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-mobile size-l"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-mobile size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-mobile size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle adornment props 1`] = `
<ForwardRef(TextField)
  startAdornment="Name: "
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <Box
        alignItems="center"
        display="flex"
        marginRight={4}
      >
        <div
          className="display-flex align-items-center M-r__4"
        >
          Name: 
        </div>
      </Box>
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should handle adornment props 2`] = `
<ForwardRef(TextField)
  endAdornment="Kg"
  startAdornment={null}
>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
      <Box
        alignItems="center"
        display="flex"
        marginLeft={4}
      >
        <div
          className="display-flex align-items-center M-l__4"
        >
          Kg
        </div>
      </Box>
    </div>
  </div>
</ForwardRef(TextField)>
`;

exports[`<TextField /> should render without props 1`] = `
<ForwardRef(TextField)>
  <div
    className="root"
  >
    <div
      className="reset input-block variant-desktop size-l rounds-sm__all"
      data-testid="text-field:block"
      onClick={[Function]}
    >
      <div
        className="main-column"
      >
        <div
          className="input-wrapper"
        >
          <ForwardRef(BaseInput)
            className="base-input variant-desktop size-l"
            data-testid="text-field:field"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
          >
            <div
              className="reset root base-input variant-desktop size-l"
            >
              <input
                className="field reset"
                data-testid="text-field:field"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                onInput={[Function]}
              />
            </div>
          </ForwardRef(BaseInput)>
        </div>
      </div>
    </div>
  </div>
</ForwardRef(TextField)>
`;
